--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<h1 align="center">Le site est en cours de construction</h1>
+<h1 align="center">Le site est en cours de construction.</h1>
+<h2 align="center">Merci de votre compréhension.</h2>
