Index.html updated ( Basic html page ).

--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
-<h1 align="center">Le site est en cours de construction.</h1>
-<h2 align="center">Merci de votre compréhension.</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shadow-Hoods | Main page</title>
+</head>
+<body>
+    <h1 align="center">Le site est en cours de construction.</h1>
+    <h2 align="center">Merci de votre compréhension.</h2>
+</body>
+</html>
