Align= "center" removed
ce sont des balises obsolètes, et on peut les réarranger avec le CSS en mieux.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Shadow-Hoods | Main page</title>
 </head>
 <body>
-    <h1 align="center">Le site est en cours de construction.</h1>
-    <h2 align="center">Merci de votre compréhension.</h2>
+    <h1>Le site est en cours de construction.</h1>
+    <h2>Merci de votre compréhension.</h2>
 </body>
 </html>
