Ajout d'une balise Script
et une possibilité d'ajout de fonctionnalité JS **TIMER** pour dire dans combien de temps cela va commencer ou wtv.

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1>Le site est en cours de construction.</h1>
     <h2>Merci de votre compréhension.</h2>
+    <script>
+        /*Ajout de JS exemple un Timer ou counterdown  pour dire dans combien de temps Environ vous estimez le lancement ou wtv. */
+    </script>
 </body>
 </html>
