Index.html  Updated | Version 0.0.2
Main page updated
New visual html / CSS

--- a/index.html
+++ b/index.html
@@ -5,12 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shadow-Hoods | Main page</title>
+    <img src="#"alt="logo" class="logo">
+    <link 
 </head>
 <body>
     <h1>Le site est en cours de construction.</h1>
     <h2>Merci de votre compréhension.</h2>
+    <style>
+        h1,h2 {
+        color: red;
+}
+    h1 {
+        position: absolute;
+        bottom: 500px;
+        right: 750px;
+    }
+    h2 {
+        position: absolute;
+        bottom: 450px;
+        right: 850px;
+    }
+    div.footer {
+        position: absolute;
+        top: 900px;
+        left: 750px;
+    }
+    .logo {
+        position: absolute;
+        left: 800px;
+    }
+    </style>
     <script>
         /*Ajout de JS exemple un Timer ou counterdown  pour dire dans combien de temps Environ vous estimez le lancement ou wtv. */
     </script>
 </body>
+<div class="footer">
+<footer>
+    Developped by: 3xpl0it Sh4d0w | Helper : Noxious
+</footer>
+</div>
 </html>
