--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<title>Shadow Hoods</title>
-
+		<script src="./assets/js/index.js"></script>
+		<link rel="stylesheet" href="./assets/css/index.css">
 	</head>
 	
 	<body>
@@ -16,7 +17,7 @@
 		</main>
 	
 		<footer>
-			<p></p>
+			
 		</footer>
 	</body>
 </html>
