ecrire du code en etant malade et avant de dormir == faire un exam de maths sans y reviser XD

--- a/index.html
+++ b/index.html
@@ -5,12 +5,32 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Shadow Hoods</title>
-		<script src="./assets/js/index.js"></script>
-		<link rel="stylesheet" href="./.fonts.css">
-		<link rel="stylesheet" href="./assets/css/index.css">
+		<script src="/assets/js/index.js"></script>
+		<link rel="stylesheet" href="/fonts.css">
+		</style>
+		<link rel="stylesheet" href="/assets/css/index.css">
+		<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 	</head>
 
 	<body>
-		<h1 align="center" class="title">Shadow Hoods</h1>
+		<div class="j">
+			<section class="a">
+				<h1 class="title">Shadow Hoods</h1>
+			</section>
+			<section class="description a">
+				oljoiooooooowwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwscsioncwoincoinxcnwslcnlkwnxcldnwnlckncwlkn
+			</section>
+			<section class="info">
+				<div class="info">
+					<h2>Total Count: 168168161</h2>
+				</div>
+				<div class="info">
+					<h2>Members Count: 762762826</h2> 
+				</div>
+				<div class="info">
+					<h2>Bots Count: 7376872</h2> 
+				</div>
+			</section>
+		</div>
 	</body>
 </html>
