--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
 		<title>Shadow Hoods</title>
 		<script src="/assets/js/index.js"></script>
 		<link rel="stylesheet" href="/fonts.css">
-		</style>
+		<link rel="stylesheet" href="/assets/css/selecao.css">
+		<link rel="stylesheet" href="/assets/css/bi.css">
+		<link rel="stylesheet" href="/assets/css/glight.css">
 		<link rel="stylesheet" href="/assets/css/index.css">
 		<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	</head>
 
 	<body>
@@ -20,17 +24,77 @@
 			<section class="description a">
 				oljoiooooooowwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwscsioncwoincoinxcnwslcnlkwnxcldnwnlckncwlkn
 			</section>
-			<section class="info">
-				<div class="info">
-					<h2>Total Count: 168168161</h2>
+			<section class="a info">
+				<div>
+					<h2>Total Count: {{everyone}}</h2>
 				</div>
-				<div class="info">
-					<h2>Members Count: 762762826</h2> 
+				<div>
+					<h2>Members Count: {{members}}</h2> 
 				</div>
-				<div class="info">
-					<h2>Bots Count: 7376872</h2> 
+				<div>
+					<h2>Bots Count: {{bots}}</h2> 
 				</div>
 			</section>
 		</div>
+		<div class="row">
+			<div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+				<div class="member aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
+					<div class="member-img">
+						<img src="https://cdn.discordapp.com/avatars/744961307932885052/0d101e59dd3ce4988f9d3df9b08cd039.webp?size=512" class="img-fluid" alt="">
+						<div class="social">
+							<a href="https://github.com/3xpl0it-sh4d0w"><i class="bi bi-github"></i></a>
+						</div>
+					</div>
+					<div class="member-info">
+						<h4>3xpl0it sh4d0w</h4>
+						<span>Fondateur<br>Sys Admin &amp; OSINT | <a href="https://lnk.bio/3xpl0it.sh4d0w">more about me...</a></span>
+					</div>
+				</div>
+			</div>
+			
+			<div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+				<div class="member aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
+					<div class="member-img">
+						<img src="https://cdn.discordapp.com/avatars/471389909375123485/2ce1dc9acc62ca8247c2af9a082f2c32.webp?size=512" class="img-fluid" alt="">
+						<div class="social">
+							<a href="#"><i class="bi bi-github"></i></a>
+						</div>
+					</div>
+					<div class="member-info">
+						<h4>Awoy Delta Echo Victor</h4>
+						<span>Fondateur<br>Front-End &amp; Back-End &amp; Discord Bot Dev</span>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+				<div class="member aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
+				  	<div class="member-img">
+						<img src="https://cdn.discordapp.com/avatars/778627103578783776/e1939716252edabfe19449727647ece6.webp?size=512" class="img-fluid" style="width: 900px; height: auto;" alt="">
+						<div class="social">
+						  <a href="https://www.github.com/NacreousDawn596"><i class="bi bi-github"></i></a>
+						</div>
+				  	</div>
+			  		<div class="member-info">
+						<h4>NacreousDawn596</h4>
+						<span>Fondateur<br>Front-End &amp; Back-End &amp; Designer &amp; AI dev &amp; Discord Bot Dev | <a href="https://afriad-kamal.github.io/about-me">more about me...</a></span>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+				<div class="member aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
+					<div class="member-img">
+						<img src="https://cdn.discordapp.com/avatars/957367448871534654/7efcfd15557835dc34b2b68823ab7848.webp?size=512" class="img-fluid" alt="">
+						<div class="social">
+							<a href="https://github.com/NXS-DEV"><i class="bi bi-github"></i></a>
+						</div>
+					</div>
+					<div class="member-info">
+						<h4>Noxious</h4>
+						<span>Modérateur<br>AI Dev &amp; Discord bot Dev</span>
+					</div>
+				</div>
+			</div>
+  
+		  </div>
 	</body>
 </html>
